--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
             <li class="nav-item active ">
-                <a class="nav-link " href="#">Liste des jeux <span class="sr-only">(current)</span></a>
+                <a class="nav-link " href="/">Liste des jeux <span class="sr-only">(current)</span></a>
             </li>
         </div>
     </nav>
