--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -24,13 +24,14 @@
     <div class="row">
         <div class="col-md-3 d-flex">
             <img class="image img-fluid py-5 px-5" src="{{ game.cover }}">
+
         </div>
         <div class="col-md-9">
             <div class="card-body">
                 <h5 class="card-title text-center" style="background-color:white">{{ game.Name }}</h5>
                 <p class="card-text mt-5" style="background-color:white">{{ game.description }}</p>
-                <div class="sortie font-weight-bold">
-                    Sortie le :  {{ game.date |date('d-m-Y') }}
+                <div class="sortie">
+                    Sortie le : <span style="font-weight:bold"> {{ game.date |date('d-m-Y') }}</span>
                 </div>
             </div>
         </div>
