--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -20,20 +20,20 @@
     <div class="row">
         <div class="col-md-3 d-flex">
             <a href="{{ path ('game', {id:game.id})}}">
-            <img class="image img-fluid py-5 px-5" src="{{ game.cover }}">
+            <img class="image img-fluid py-5 px-5" src="{{ game.cover }}" alt="Affiche du jeu">
             </a>
         </div>
         <div class="col-md-9">
             <div class="card-body">
-                <h5 class="card-title text-center" style="background-color:white">{{ game.Name }}</h5>
-                <p class="card-text mt-5" style="background-color:white">{{ game.description }}</p>
-                <div class="sortie">
+                <h5 class="card-title text-center" alt="Nom du jeu" style="background-color:white">{{ game.name }}</h5>
+                <p class="card-text mt-5" alt="Description du jeu" style="background-color:white">{{ game.description }}</p>
+                <div class="sortie"alt="Date de sortie du jeu">
                     Sortie le : <span style="font-weight:bold"> {{ game.date |date('d-m-Y') }}</span>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card-footer text-success font-weight-bold text-center">
+    <div class="card-footer text-success font-weight-bold text-center"alt="Note du jeu">
         {{ game.review }} / 20
     </div>
   </div>
