--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
                 {% block body %}{% endblock %}
         </div>
         <footer>
-            <div class="card-footer text-light bg-dark text-center fixed-bottom">
+            <div class="card-footer text-light bg-dark text-center ">
                 Copyright © 2020 Développé par Piro.
             </div>
         </footer>
