--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -7,6 +7,12 @@
 {% block stylesheet %}
 <style>
 
+.pag {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
 
 </style>
 {% endblock %}
@@ -14,7 +20,7 @@
 
 {% block body %}
 
-{% for game in games %}
+{% for game in gamesTest %}
 <div class="card mt-3">
   <div class="card-body">
     <div class="row">
@@ -39,9 +45,10 @@
   </div>
 </div>
 {% endfor %}
-<div class="page">
-
-
+<div class="container pag mt-3">
+    <div class="row">
+        {{ knp_pagination_render(gamesTest) }}
+    </div>
 </div>
 
 
