--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -4,14 +4,14 @@
 
 
 
-{% block stylesheet %}
+{% block stylesheets %}
 <style>
 
 .pag {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 </style>
@@ -45,8 +45,8 @@
   </div>
 </div>
 {% endfor %}
-<div class="container pag mt-3">
-    <div class="row">
+<div class="container  mt-3">
+    <div class="row pag">
         {{ knp_pagination_render(gamesTest) }}
     </div>
 </div>
