--- a/templates/game/game.html.twig
+++ b/templates/game/game.html.twig
@@ -31,6 +31,7 @@
                 <tr>
                     <td >Editeur(s) / Développeur(s) :</td>
                     {% if game.editor == null or game.editor.id == 0 %}
+                    <td>Inconnue</td>
                     {% else %}
                     <td>{{ game.editor.name }}</td>
                     {% endif %}
